--- a/weixin-mp/pom.xml
+++ b/weixin-mp/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>weixin-parent</artifactId>
-        <groupId>cn.com.riversoft</groupId>
-        <version>0.9.6-SNAPSHOT</version>
+        <groupId>io.zhijian</groupId>
+        <version>1.0.0</version>
         <relativePath>../weixin-parent/</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.com.riversoft</groupId>
+            <groupId>io.zhijian</groupId>
             <artifactId>weixin-common</artifactId>
             <version>${project.version}</version>
         </dependency>
